[package]
name = "max7219-async"
description = "Async driver for the MAX7219"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/akeamc/max7219"
authors = [
    "Maikel Wever <maikel@maikelwever.nl>",
    "Ales Katona <ales@katona.me>",
    "Åke Amcoff <ake@amcoff.net>",
]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal", "max7219", "ledcontrol", "no_std"]

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-hal-async = "1.0"

[features]
defmt-03 = ["embedded-hal-async/defmt-03", "dep:defmt"]
